--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-native-network-logger",
   "version": "1.0.0",
   "description": "An HTTP traffic monitor for React Native with zero dependencies",
-  "main": "lib/index.js",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.ts",
+  "types": "lib/typescript/src/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexbrazier/react-native-network-logger.git"
+    "url": "https://github.com/alexbrazier/react-native-network-logger.git"
   },
   "keywords": [
     "react",
@@ -15,24 +18,108 @@
     "interceptor",
     "http",
     "monitor",
-    "logging"
+    "logging",
+    "ios",
+    "android"
   ],
   "author": "alexbrazier",
   "license": "MIT",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
-    "prepare": "yarn build",
-    "prebuild": "rimraf lib",
-    "build": "tsc"
+    "test": "jest",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "bob build",
+    "release": "release-it"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/react": "^16.9.38",
+    "@react-native-community/bob": "^0.15.2",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@release-it/conventional-changelog": "^1.1.4",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.19",
     "@types/react-native": "^0.62.13",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "react": "16.11.0",
+    "react-native": "0.62.0",
+    "release-it": "^13.5.8",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.5"
   },
-  "homepage": "https://github.com/alexbrazier/react-native-network-logger.git"
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn typescript"
+    }
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
+  },
+  "eslintConfig": {
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
+  "homepage": "https://github.com/alexbrazier/react-native-network-logger.git",
+  "@react-native-community/bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
+  }
 }
