--- a/example/package.json
+++ b/example/package.json
@@ -14,16 +14,18 @@
   "dependencies": {
     "expo": "~37.0.3",
     "react": "~16.9.0",
-    "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
-    "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-unimodules": "~0.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
+    "@babel/core": "^7.10.3",
+    "@babel/runtime": "^7.10.3",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "~8.1.0",
-    "expo-cli": "^3.17.18"
+    "babel-preset-expo": "~8.2.1",
+    "expo-cli": "^3.21.9"
+  },
+  "resolutions": {
+    "axios": "^0.19.0",
+    "logkitty": "^0.7.1"
   }
 }
