--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@react-native-community/bob": "^0.15.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
+    "@testing-library/react-native": "^5.0.3",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.62.13",
@@ -57,6 +58,7 @@
     "jest": "^26.0.1",
     "react": "16.11.0",
     "react-native": "0.62.0",
+    "react-test-renderer": "^16.13.1",
     "release-it": "^13.5.8",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.5"
@@ -69,7 +71,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "jest": {
-    "preset": "react-native",
+    "preset": "@testing-library/react-native",
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
