--- a/package.json
+++ b/package.json
@@ -48,26 +48,29 @@
   "devDependencies": {
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@release-it/conventional-changelog": "^1.1.4",
-    "@testing-library/react-native": "^5.0.3",
-    "@types/jest": "^26.0.4",
-    "@types/react": "^16.9.41",
-    "@types/react-native": "^0.62.17",
-    "eslint": "^7.4.0",
+    "@release-it/conventional-changelog": "^2.0.0",
+    "@testing-library/react-native": "^7.0.2",
+    "@types/jest": "^26.0.13",
+    "@types/react": "^16.9.49",
+    "@types/react-native": "^0.63.18",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "react": "16.13.1",
+    "react-native": "0.63.2",
     "react-test-renderer": "^16.13.1",
-    "release-it": "^13.6.5",
+    "release-it": "^14.0.2",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "resolutions": {
+    "node-fetch": "^2.6.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
