--- a/example/package.json
+++ b/example/package.json
@@ -22,11 +22,12 @@
     "@babel/runtime": "^7.11.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~8.2.3",
-    "expo-cli": "^3.27.4"
+    "expo-cli": "^3.27.6"
   },
   "resolutions": {
     "axios": "^0.19.0",
     "jpeg-js": "^0.4.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "node-forge": "^0.10.0"
   }
 }
