--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install -g yarn
+      - run: yarn install
       - run: yarn typescript
   eslint-check:
     runs-on: ubuntu-latest
