--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install -g yarn
+      - run: yarn install
       - run: yarn lint
   unit-test-check:
     runs-on: ubuntu-latest
@@ -25,4 +26,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install -g yarn
+      - run: yarn install
       - run: yarn test
