--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,27 +1,28 @@
 name: Pull-Request-Checks
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
 jobs:
-  typescript-check:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: yarn install
-      - run: yarn typescript
-  eslint-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
       - run: yarn install
       - run: yarn lint
-  unit-test-check:
+      - run: yarn typescript
+  unit-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
       - run: yarn install
       - run: yarn test
