--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,7 @@
     "expo-cli": "^4.1.6"
   },
   "resolutions": {
+    "immer": "^8.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0"
   }
