--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "expo": "~41.0.1",
+    "graphql": "^15.5.1",
     "react": "~17.0.2",
     "react-native": "~0.63.4"
   },
