--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
-          node-version: '12'
-      - run: yarn install --frozen-lockfile
+          node-version: '14'
+      - run: yarn bootstrap --frozen-lockfile
       - run: yarn lint
       - run: yarn typescript
       - run: yarn prettier
@@ -22,8 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
-          node-version: '12'
-      - run: yarn install --frozen-lockfile
+          node-version: '14'
+      - run: yarn bootstrap --frozen-lockfile
       - run: yarn test --coverage
