--- a/example/package.json
+++ b/example/package.json
@@ -19,13 +19,14 @@
     "react-native": "~0.63.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/runtime": "^7.14.0",
+    "@babel/core": "^7.14.6",
+    "@babel/runtime": "^7.14.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-expo": "~8.3.0",
-    "expo-cli": "^4.4.3"
+    "expo-cli": "^4.7.2"
   },
   "resolutions": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "chokidar": "^3.4.1"
   }
 }
