--- a/example/package.json
+++ b/example/package.json
@@ -12,21 +12,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.20",
-    "expo": "~41.0.1",
-    "graphql": "^15.5.1",
+    "@apollo/client": "^3.4.16",
+    "expo": "~43.0.0-beta.4",
+    "graphql": "^15.6.1",
     "react": "~17.0.2",
-    "react-native": "~0.63.4"
+    "react-native": "~0.64.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/runtime": "^7.14.6",
+    "@babel/core": "^7.15.8",
+    "@babel/runtime": "^7.15.4",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-expo": "~8.3.0",
-    "expo-cli": "^4.7.2"
+    "babel-preset-expo": "~8.4.1",
+    "expo-cli": "^4.12.1"
   },
   "resolutions": {
-    "node-fetch": "^2.6.1",
-    "chokidar": "^3.4.1"
+    "chokidar": "^3.4.1",
+    "immer": "^9.0.6"
   }
 }
