--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
-    "expo": "~43.0.0-beta.4",
+    "expo": "~43.0.0",
     "graphql": "^15.6.1",
     "react": "~17.0.2",
     "react-native": "~0.64.2"
@@ -23,7 +23,7 @@
     "@babel/runtime": "^7.15.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-expo": "~8.4.1",
-    "expo-cli": "^4.12.1"
+    "expo-cli": "^4.12.10"
   },
   "resolutions": {
     "chokidar": "^3.4.1",
