Update dev and example dependencies - expo v44 (#63)
* Update dev and example dependencies - expo v44

* Downgrade eslint again

* Fix metro config in example

--- a/package.json
+++ b/package.json
@@ -47,20 +47,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@react-native-community/bob": "^0.17.1",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@release-it/conventional-changelog": "^3.3.0",
-    "@testing-library/react-native": "^8.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.33",
+    "@release-it/conventional-changelog": "^4.2.0",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.39",
     "@types/react-native": "^0.63.52",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.2",
     "jest": "^27.3.1",
-    "react": "17.0.2",
-    "react-native": "0.64.2",
+    "react": "^17.0.2",
+    "react-native": "^0.64.3",
+    "react-native-builder-bob": "^0.18.2",
     "react-test-renderer": "^17.0.2",
     "release-it": "^14.11.6",
     "rimraf": "^3.0.2",
@@ -127,7 +127,7 @@
     "coverage"
   ],
   "homepage": "https://github.com/alexbrazier/react-native-network-logger.git",
-  "@react-native-community/bob": {
+  "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
     "targets": [
