--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
     "husky": "^7.0.2",
     "jest": "^27.3.1",
     "react": "^17.0.2",
-    "react-native": "^0.64.3",
+    "react-native": "^0.65.0",
     "react-native-builder-bob": "^0.18.2",
+    "react-native-json-tree": "^1.3.0",
     "react-test-renderer": "^17.0.2",
     "release-it": "^14.11.6",
     "rimraf": "^3.0.2",
