--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-native": "^0.69.4",
     "react-native-builder-bob": "^0.18.3",
