--- a/package.json
+++ b/package.json
@@ -47,24 +47,25 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@react-native-community/eslint-config": "^3.0.1",
-    "@release-it/conventional-changelog": "^4.2.0",
-    "@testing-library/react-native": "^9.0.0",
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.39",
-    "@types/react-native": "^0.63.52",
-    "eslint": "^7.29.0",
+    "@react-native-community/eslint-config": "^3.1.0",
+    "@release-it/conventional-changelog": "^5.1.0",
+    "@testing-library/react-native": "^11.0.0",
+    "@types/jest": "^28.1.7",
+    "@types/react": "^18.0.17",
+    "@types/react-native": "^0.69.5",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.3.1",
-    "react": "^17.0.2",
-    "react-native": "^0.64.3",
-    "react-native-builder-bob": "^0.18.2",
-    "react-test-renderer": "^17.0.2",
-    "release-it": "^14.11.6",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-native": "^0.69.4",
+    "react-native-builder-bob": "^0.18.3",
+    "react-test-renderer": "^18.2.0",
+    "release-it": "^15.3.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react": "*",
