--- a/example/package.json
+++ b/example/package.json
@@ -22,11 +22,6 @@
     "@babel/core": "^7.18.10",
     "@babel/runtime": "^7.18.9",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-expo": "~9.2.0",
-    "expo-cli": "^6.0.5"
-  },
-  "resolutions": {
-    "chokidar": "^3.4.1",
-    "immer": "^9.0.6"
+    "babel-preset-expo": "~9.2.0"
   }
 }
