--- a/package.json
+++ b/package.json
@@ -49,23 +49,23 @@
   "devDependencies": {
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^29.2.4",
-    "@types/react": "^18.0.26",
-    "@types/react-native": "^0.70.8",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@testing-library/react-native": "^12.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-native": "^0.70.6",
-    "react-native-builder-bob": "^0.20.3",
+    "react-native": "0.71.3",
+    "react-native-builder-bob": "^0.20.4",
     "react-test-renderer": "^18.2.0",
-    "release-it": "^15.5.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.9.4"
+    "release-it": "^15.9.0",
+    "rimraf": "^4.4.0",
+    "typescript": "^5.0.2"
   },
   "peerDependencies": {
     "react": "*",
