feat: Compact vs regular rows (#92)
* Compact vs regular rows

* Update src/components/NetworkLogger.spec.tsx

* test

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
-    ]
+    ],
+    "globalSetup": "<rootDir>/global-jest-setup.js"
   },
   "husky": {
     "hooks": {
