--- a/package.json
+++ b/package.json
@@ -48,24 +48,24 @@
   "dependencies": {},
   "devDependencies": {
     "@react-native-community/eslint-config": "^3.2.0",
-    "@release-it/conventional-changelog": "^8.0.1",
-    "@testing-library/react-native": "^12.1.2",
-    "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.6",
-    "@types/react-native": "^0.72.0",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
-    "react": "^18.2.0",
-    "react-native": "0.71.8",
-    "react-native-builder-bob": "^0.23.2",
-    "react-test-renderer": "^18.2.0",
-    "release-it": "^17.0.1",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.0.4"
+    "@release-it/conventional-changelog": "^8.0.2",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^18.3.8",
+    "@types/react-native": "^0.73.0",
+    "eslint": "^9.11.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "react": "~18.2.0",
+    "react-native": "0.74.5",
+    "react-native-builder-bob": "^0.30.2",
+    "react-test-renderer": "^18.3.1",
+    "release-it": "^17.6.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "react": "*",
@@ -122,6 +122,9 @@
         }
       ]
     }
+  },
+  "resolutions": {
+    "proxy-agent": "6.4.0"
   },
   "eslintIgnore": [
     "node_modules/",
