--- a/example/package.json
+++ b/example/package.json
@@ -13,16 +13,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
-    "expo": "~49.0.21",
+    "expo": "~51.0.38",
     "graphql": "^16.6.0",
     "react": "~18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.74.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/runtime": "^7.23.6",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-preset-expo": "^9.5.2"
+    "@babel/core": "^7.25.8",
+    "@babel/runtime": "^7.25.7",
+    "@react-native/metro-config": "^0.75.4",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "^11.0.15"
   },
   "resolutions": {
     "semver": "^7.5.4"
