--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
     "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-builder-bob": "^0.30.2",
@@ -106,9 +106,12 @@
   },
   "eslintConfig": {
     "extends": [
-      "@react-native-community",
+      "expo",
       "prettier"
-    ]
+    ],
+    "env": {
+      "node": true
+    }
   },
   "eslintIgnore": [
     "node_modules/",
