--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@release-it/conventional-changelog": "^8.0.1",
     "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.13",
@@ -57,6 +58,7 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-native": "0.74.5",
