--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "react-native-network-logger",
   "version": "1.17.0",
   "description": "An HTTP traffic monitor for React Native with zero dependencies",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
-  "react-native": "src/index",
-  "types": "lib/typescript/src/index.d.ts",
+  "main": "./lib/module/index.js",
+  "types": "./lib/typescript/src/index.d.ts",
+  "exports": {
+    ".": {
+      "source": "./src/index.tsx",
+      "types": "./lib/typescript/src/index.d.ts",
+      "default": "./lib/module/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "source": "src/index.tsx",
   "repository": {
     "type": "git",
@@ -43,16 +49,15 @@
     "prettier": "prettier --check '{,example/}src/**/*.{js,json,ts,tsx}' '{*,example/*}.{js,ts,tsx}'",
     "prepare": "bob build",
     "release": "release-it",
-    "example": "yarn --cwd example",
-    "bootstrap": "yarn example && yarn"
+    "example": "yarn workspace react-native-network-logger-example",
+    "bootstrap": "yarn"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@release-it/conventional-changelog": "^8.0.1",
-    "@testing-library/react-native": "^12.7.2",
+    "@release-it/conventional-changelog": "^10.0.1",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.2.6",
+    "@types/react": "^19.1.3",
     "eslint": "^8.41.0",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
@@ -60,13 +65,13 @@
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
-    "react": "^18.2.0",
-    "react-native": "0.74.5",
-    "react-native-builder-bob": "^0.30.2",
-    "react-test-renderer": "^18.3.1",
-    "release-it": "^17.10.0",
+    "react": "~19.0.0",
+    "react-native": "0.79.2",
+    "react-native-builder-bob": "^0.40.10",
+    "react-test-renderer": "^19.1.0",
+    "release-it": "^19.0.2",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -88,6 +93,10 @@
       "pre-commit": "yarn lint && yarn typescript"
     }
   },
+  "workspaces": [
+    "example"
+  ],
+  "packageManager": "yarn@3.6.1",
   "release-it": {
     "git": {
       "commitMessage": "chore: release ${version}",
@@ -125,9 +134,18 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      "commonjs",
-      "module",
-      "typescript"
+      [
+        "module",
+        {
+          "esm": true
+        }
+      ],
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
   }
 }
