--- a/package.json
+++ b/package.json
@@ -53,18 +53,22 @@
     "bootstrap": "yarn"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
+    "@react-native/babel-preset": "0.78.2",
+    "@react-native/eslint-config": "^0.78.0",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@testing-library/react-native": "^13.2.0",
+    "@testing-library/react-native": "~13.1.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.3",
-    "eslint": "^8.41.0",
-    "eslint-config-expo": "^7.1.2",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "react": "~19.0.0",
     "react-native": "0.79.2",
     "react-native-builder-bob": "^0.40.10",
@@ -115,20 +119,6 @@
       }
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "expo",
-      "prettier"
-    ],
-    "env": {
-      "node": true
-    }
-  },
-  "eslintIgnore": [
-    "node_modules/",
-    "lib/",
-    "coverage"
-  ],
   "homepage": "https://github.com/alexbrazier/react-native-network-logger.git",
   "react-native-builder-bob": {
     "source": "src",
